--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
+    "@jiaminghi/data-view": "^2.9.8",
     "animate.css": "^4.1.0",
     "ant-design-vue": "^1.6.2",
     "axios": "^0.19.2",
